styles.css
@font-face {
  font-family: 'Libre Baskerville';
  src: url('./fonts/LibreBaskerville-Regular.woff2') format('woff2');
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: 'Libre Baskerville';
  src: url('./fonts/LibreBaskerville-Bold.woff2') format('woff2');
  font-weight: bold;
  font-style: normal;
}

@font-face {
  font-family: 'Libre Baskerville';
  src: url('./fonts/LibreBaskerville-Italic.woff2') format('woff2');
  font-weight: normal;
  font-style: italic;
}

body {
  font-size: clamp(0.8rem, calc(0.5rem + 1.2vw), 2.5rem);
  font-family: 'Libre Baskerville', serif;
  -webkit-text-size-adjust: none;
  text-size-adjust: none;
}

h1, h2, h3, h4, p {
  margin: 0;
}

h2 {
  font-size: 1.6em;
  font-weight: normal;
}

a,
a:visited {
  color: currentColor;
}

a {
  text-decoration-color: var(--link-text-color);
  text-decoration-line: underline;
  text-decoration-style: dotted;
  text-decoration-thickness: from-font;
}

@media (hover: none) {
  img {
    pointer-events: none;
  }
}

@media (hover: hover) {
  a:hover,
  a:focus {
    color: var(--link-text-hover-color);
  }

  a:hover {
    text-decoration-style: solid;
    text-decoration-color: var(--link-text-hover-color);
  }
}

header {
  height: 100svh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

main {
  text-align: center;
}

section {
  margin-top: 8svh;
}

.signature {
  aspect-ratio: 860 / 140;
  margin: 0 max(5vw, calc(16em - 300px));
}

.separator {
  margin: 0 1em;
}

.date {
  margin-top: 2em;
  padding-left: 1.4em;
}

.emph {
  font-style: italic;
}

.zip {
  margin-left: 0.5em;
}

.ceremony {
  margin-top: -20svh;
}

.mosteiro {
  display: inline-block;
  max-width: 100%;
  max-height: 80svh;
  aspect-ratio: 3200 / 2000;
}

.ceremony h2 {
  margin-top: 2svh;
}

.challet {
  display: inline-block;
  margin-top: 5svh;
  max-width: 100%;
  max-height: 70svh;
  aspect-ratio: 2140 / 1300;
}

.suggestions {
  margin-right: auto;
  margin-left: auto;
  max-width: 25em;
  text-align: left;
}

.suggestion {
  margin-top: 8svh;
  border-left: 1px solid black;
  padding-left: 1em;
}

.suggestion ul {
  list-style-type: none;
  padding: 0;
  margin: 0;
}

.map-container {
  position: relative;
  display: inline-block;
}

.map {
  display: inline-block;
  max-width: 100%;
  max-height: 80svh;
  aspect-ratio: 1450 / 2100;
}

.map-overlay {
  position: absolute;
  top: 0;
  left: 0;
  pointer-events: none;
}

@media (min-width: 850px) {
  .contacts {
    display: flex;
    justify-content: space-around;
  }
}

.bride {
  text-align: left;
}

.groom {
  text-align: right;
}

.nowrap {
  white-space: nowrap;
}

footer {
  padding-bottom: 60svh;
}

